maven plugins, profiles, upgraded app, json logging etc.